# ossman

./: .gitignore  CMakeLists.txt  main.cpp  ossman.pro  readme.md  readme_zh.md  resource.qrc
bend/: gateway.cpp  gateway.h
bend/mgr/: cloudmanager.cpp  cloudmanager.h  dbmanager.cpp  dbmanager.h
bend/service/cloud/: commoncloud.h  coscloud.cpp  coscloud.h  kodocloud.cpp  kodocloud.h  osscloud.cpp  osscloud.h  s3cloud.cpp  s3cloud.h
bend/service/config/: versionconfig.cpp  versionconfig.h  versionjson.cpp  versionjson.h
bend/service/db/: logininfo.cpp  logininfo.h
bend/service/db/sqlite/: logininfosqlite.cpp  logininfosqlite.h
bend/service/log/: basiclogger.cpp  basiclogger.h  qdebuglogger.cpp  qdebuglogger.h
config/: api.h  baseexception.cpp  baseexception.h  common.h  errorcode.h  global.h  loggerproxy.cpp  loggerproxy.h  versioncmd.cpp  versioncmd.h
fend/uicommon/: basedialog.cpp  basedialog.h  basedialog.ui  emptydialog.cpp  emptydialog.h  emptydialog.ui
fend/uilogin/: logindialog.cpp  logindialog.h  logindialog.ui  uimain.cpp  uimain.h  uimain.ui
helper/: dbsqlite.cpp  dbsqlite.h  filehelper.cpp  filehelper.h  httphelper.cpp  httphelper.h  signhelper.cpp  signhelper.h
middle/: globalmanager.cpp  globalmanager.h  modelmanager.cpp  modelmanager.h
middle/model/: cloudmodel.cpp  cloudmodel.h  dbmodel.h
middle/signal/: signalmanager.cpp  signalmanager.h
plugin/: pluginmanager.cpp  pluginmanager.h
static/configs/: ossconfig.json
static/qss/: default.qss
static/sql/: login_info.sql
static/testing/: business.json  custom.json
